--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">StudentDiary</string>
+    <string name="book_title">Book Title</string>
+    <string name="author_name">Author Name</string>
+    <string name="pages">Pages</string>
+    <string name="add">Add</string>
+    <string name="_1">1</string>
+    <string name="title1">Title1</string>
+    <string name="author1">Author1</string>
 </resources>
