--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="_1">1</string>
     <string name="title1">Title1</string>
     <string name="author1">Author1</string>
+    <string name="textview">TextView</string>
 </resources>
