--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="title1">Title1</string>
     <string name="author1">Author1</string>
     <string name="textview">TextView</string>
+    <string name="author">Author Name</string>
+    <string name="book">Book Title</string>
 </resources>
