--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">StudentDiary</string>
-    <string name="book_title">Book Title</string>
-    <string name="author_name">Author Name</string>
-    <string name="pages">Pages</string>
+    <string name="student_name">Student Name</string>
+    <string name="sabaq_name">Sabaq</string>
+    <string name="Sabqi">Sabqi</string>
     <string name="add">Add</string>
     <string name="_1">1</string>
-    <string name="title1">Title1</string>
-    <string name="author1">Author1</string>
+    <string name="name1">Name1</string>
+    <string name="sabaq1">Sabaq1</string>
     <string name="textview">TextView</string>
-    <string name="author">Author Name</string>
-    <string name="book">Book Title</string>
+    <string name="Sabaq">Sabaq</string>
+    <string name="student">Student Name</string>
 </resources>
